--- a/src/components/loadingIndicator/LoadingIndicator.css
+++ b/src/components/loadingIndicator/LoadingIndicator.css
@@ -1,8 +1,11 @@
 .loading-indicator {
-    position: relative;
-    margin: 100px auto 0;
-    width: 80px;
-    height: 80px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background: rgba(161, 179, 209, 0.5);
 }
 
 .loading-indicator .circle {
@@ -10,8 +13,10 @@
     left: 0;
     top: 0;
     border-radius: 50%;
-    width: 100%;
-    height: 100%;
+    top: calc(50% - 50px);
+    left: calc(50% - 50px);
+    width: 100px;
+    height: 100px;
     opacity: .4;
     background-color: #28959a;
     animation: loadingIndicator 2.25s infinite ease-in-out;
