add mediaList component

--- a/src/index.css
+++ b/src/index.css
@@ -96,6 +96,10 @@ body {
     .g-col.card {
         width: 20%;
     }
+
+    .small-5 {
+        width: 50%;
+    }
 }
 
 @media screen and (max-width: 46.25em){
@@ -106,11 +110,19 @@ body {
     .content-flex-horizontal{
         flex-direction: column;
     }
+
+    /* .small-5 {
+        width: 50%;
+    } */
 }
 
 @media screen and (max-width: 31.25em){
     .g-col.card {
         width: 50%;
+    }
+
+    .small-5 {
+        width: 100%;
     }
 }
 
