add logic for voting media

--- a/src/index.css
+++ b/src/index.css
@@ -92,14 +92,27 @@ body {
 /* Media queries */
 /*----------------------------------*/
 
+@media screen and (min-width: 90em){
+
+    .media-box .media-box {
+        height: 460px;
+    }
+}
+
+
 @media screen and (min-width: 46.25em){
     .g-col.card {
         width: 20%;
     }
 
     .small-5 {
-        width: 50%;
+        width: 48%;
+        margin-right: 10px;
     }
+
+    /* .media-box .message-box {
+        height: 460px;
+    } */
 }
 
 @media screen and (max-width: 46.25em){
