--- a/src/components/shareablePartyUrl/ShareablePartyUrl.css
+++ b/src/components/shareablePartyUrl/ShareablePartyUrl.css
@@ -20,7 +20,7 @@
     padding: 5px 15px;
     margin: 14px 0 14px 30px;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     color: #f0f0f0;
     font-family: inherit;
     background: #373737;
