--- a/src/pages/login/LoginPage.css
+++ b/src/pages/login/LoginPage.css
@@ -244,7 +244,7 @@ button.w3l-cart {
 
 .body {
     height: 100%;
-    background: url("../../assets/images/banner.jpg") no-repeat center; 
+    /* background: url("../../assets/images/banner.jpg") no-repeat center;  */
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
