--- a/src/components/chatBox/ChatBox.css
+++ b/src/components/chatBox/ChatBox.css
@@ -14,7 +14,7 @@
     overflow-y: auto;
     display: flex;
     align-items: flex-end;
-    height: 200px;
+    min-height: 200px;
 }
 
 .chat-box .message-box .messages-wrapper{
