--- a/src/index.css
+++ b/src/index.css
@@ -87,7 +87,9 @@ body {
     }
 }
 
-
+.media-box .media-box {
+    min-height: 175px;
+}
 /*==================================*/
 /* Media queries */
 /*----------------------------------*/
