--- a/src/components/chatBox/ChatBox.css
+++ b/src/components/chatBox/ChatBox.css
@@ -5,6 +5,7 @@
     background: #1d1e1f;
     display: flex;
     flex-direction: column;
+    height: 250px;
 }
 
 .chat-box .message-box{
@@ -14,7 +15,7 @@
     overflow-y: auto;
     display: flex;
     align-items: flex-end;
-    min-height: 200px;
+    height: 200px;
 }
 
 .chat-box .message-box .messages-wrapper{
